--- a/task-7-2/task-7-2.html
+++ b/task-7-2/task-7-2.html
@@ -8,7 +8,7 @@
 <body>
     <p id ='text'>I learning JavaScript events!</p> 
     <div>
-        <button type="button" id="btn">Change style!</button>
+        <button id="btn">Change style!</button>
     </div>
     <script src="/task-7-2/task-7-2.js"></script>
 </body>
